FIX: Spelling errors, and disclaimer alignment

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@ body{
 }
 
 .unimportant{
+    position: fixed;
+    bottom: 0;
     font-size: xx-small;
-    color: black;
+    color: white;
 }
